# hpvm-autograd

./: .gitignore  CREDITS.TXT  Dockerfile  LICENSE.TXT  README.md
hpvm/: CMakeLists.txt  env.yaml  install.sh  set_paths.sh
hpvm/cmake/: FindCUDNN.cmake  TestFile.cmake
hpvm/docs/: Makefile  README.md  build-hpvm.rst  conf.py  faqs.rst  gallery.rst  getting-started.rst  index.rst  requirements.txt
hpvm/docs/components/: hpvm-profiler.rst  index.rst  keras-benchmarks.rst  keras-frontend.rst  keras-support.rst  tests.rst  torch2hpvm.rst
hpvm/docs/developerdocs/: approximation-implementation.rst  backend-passes.rst  cnn-models.rst  configuration-format.rst  dynamic-approximation.rst  index.rst  port-to-hpvm-c.rst
hpvm/docs/specifications/: hpvm-c-spec.rst  hpvm-spec.rst  index.rst  tensor_ops.rst
hpvm/include/: Config.h.in  hpvm.h
hpvm/include/BuildDFG/: BuildDFG.h
hpvm/include/ExtractHPVMLeafNodes/: ExtractHPVMLeafNodes.h
hpvm/include/FuseHPVMTensorNodes/: FuseHPVMTensorNodes.h
hpvm/include/GenHPVM/: GenHPVM.h
hpvm/include/InPlaceDFG/: InPlaceDFGAnalysis.h
hpvm/include/SupportHPVM/: DFG2LLVM.h  DFGTreeTraversal.h  DFGraph.h  HPVMHint.h  HPVMTimer.h  HPVMUtils.h
hpvm/lib/Transforms/: CMakeLists.txt
hpvm/lib/Transforms/BuildDFG/: BuildDFG.cpp  CMakeLists.txt  LLVMBuild.txt
hpvm/lib/Transforms/ClearDFG/: CMakeLists.txt  ClearDFG.cpp  LLVMBuild.txt
hpvm/lib/Transforms/DFG2LLVM_CPU/: CMakeLists.txt  DFG2LLVM_CPU.cpp  LLVMBuild.txt
hpvm/lib/Transforms/DFG2LLVM_CUDNN/: CMakeLists.txt  DFG2LLVM_CUDNN.cpp  LLVMBuild.txt
hpvm/lib/Transforms/DFG2LLVM_Grad/: CMakeLists.txt  DFG2LLVM_Grad.cpp  LLVMBuild.txt
hpvm/lib/Transforms/DFG2LLVM_OpenCL/: CMakeLists.txt  DFG2LLVM_OpenCL.cpp  LLVMBuild.txt
hpvm/lib/Transforms/DFG2LLVM_WrapperAPI/: CMakeLists.txt  DFG2LLVM_WrapperAPI.cpp  LLVMBuild.txt
hpvm/lib/Transforms/FuseHPVMTensorNodes/: CMakeLists.txt  FuseHPVMTensorNodes.cpp  LLVMBuild.txt
hpvm/lib/Transforms/GenHPVM/: CMakeLists.txt  GenHPVM.cpp  LLVMBuild.txt
hpvm/lib/Transforms/InPlaceDFG/: CMakeLists.txt  InPlaceDFGAnalysis.cpp  LLVMBuild.txt
hpvm/lib/Transforms/LocalMem/: CMakeLists.txt  LLVMBuild.txt  LocalMem.cpp
hpvm/llvm_patches/: apply_patch.sh  construct_patch.sh
hpvm/llvm_patches/include/Bitcode/: LLVMBitCodes.h
hpvm/llvm_patches/include/IR/: Attributes.td  Intrinsics.td  IntrinsicsHPVM.td
hpvm/llvm_patches/include/Support/: Debug.h
hpvm/llvm_patches/lib/AsmParser/: LLLexer.cpp  LLLexer.h  LLParser.cpp  LLParser.h  LLToken.h
hpvm/llvm_patches/lib/IR/: Attributes.cpp
hpvm/projects/: .gitignore  CMakeLists.txt
hpvm/projects/hpvm-profiler/: setup.py
hpvm/projects/hpvm-rt/: CMakeLists.txt  hpvm-rt.cpp  hpvm-rt.h
hpvm/projects/hpvm-tensor-rt/: .gitignore  CMakeLists.txt  README.md  global_knobs.txt
hpvm/projects/hpvm-tensor-rt/docs/: Changes.md  approxtuner_paper_data.md
hpvm/projects/hpvm-tensor-rt/gpu_profiler/: profiler.cpp  profiler.h
hpvm/projects/hpvm-tensor-rt/scripts/: test_dnns.py
hpvm/projects/hpvm-tensor-rt/soc_simulator/: promise_timing_model.cpp  promise_timing_model.h
hpvm/projects/hpvm-tensor-rt/tests/: perforation_tests.cc  sampling_tests.cc  tests.h
hpvm/projects/keras/: README.md  keras_python36.yml  setup.py
hpvm/projects/keras/docs/: Support.rst
hpvm/projects/keras/keras_frontend/: approxhpvm_translator.py  config.py  hpvm_dfg_translator.py  hpvm_intrinsics.py  knobs.py  promise_translator.py  quantize_utils.py  setup.py  utils.py  weight_utils.py
hpvm/projects/keras/scripts/: test_benchmarks.py
hpvm/projects/llvm-cbe/test/: APInt-C.cpp  APInt-C.h  Makefile  dtypes.h  platform.h  test.sh  test003.c  test004.c  test005.c  test006.c  test008.c  test015.c  test018.c  test020.c  test022.c  test031.c  test033.c  test034.c  test036.c  test042.c  test045.c  test046.c  test049.c  test050.c  test052.c  test054.c  test055.c  test056.c  test058.c  test063.c  test065.c  test066.c  test068.c  test071.c  test072.c  test073.c  test074.c  test075.c  test076.c  test086.c  (+8 more)
hpvm/projects/llvm-cbe/tools/: CMakeLists.txt
hpvm/projects/predtuner/: LICENSE  README.rst  setup.py
hpvm/projects/predtuner/doc/: README.md  conf.py  getting_started.rst  index.rst
hpvm/projects/predtuner/examples/: tune_hpvm_bin.py  tune_vgg16_cifar10.py
hpvm/projects/predtuner/predtuner/: __init__.py  _dbloader.py  _logging.py  _pareto.py  approxapp.py  modeledapp.py  pipedbin.py  torchapp.py
hpvm/projects/predtuner/test/: integrated_tuning.py  test_model_zoo_acc.py  test_torchapp.py
hpvm/projects/torch2hpvm/: README.rst  setup.py
hpvm/projects/torch2hpvm/torch2hpvm/: __init__.py  approxknobs.json  codegen_hpvm.py  codegen_tensor.py  compile.py  graph_builder.py  graph_ir.py  onnx_attr.py  template_hpvm.cpp.in  template_hpvm_inspect.cpp.in  template_tensor.cpp.in
hpvm/scripts/: hpvm_installer.py
hpvm/test/: .gitignore  CMakeLists.txt  README.rst  lit.site.cfg.py.in
hpvm/test/benchmarks/: CMakeLists.txt  README.md
hpvm/test/benchmarks/hpvm-cava/: .gitignore  CMakeLists.txt  CREDITS.TXT  LICENSE  README.md  convert.sh
hpvm/test/benchmarks/parboil/: README.md
hpvm/test/benchmarks/pipeline/: CMakeLists.txt  README.md
hpvm/test/benchmarks/template/: Makefile
hpvm/test/dnn_benchmarks/: .gitignore
hpvm/test/dnn_benchmarks/hpvm-c/: CMakeLists.txt  check_dnn_acc.py  lit.cfg.py
hpvm/test/dnn_benchmarks/keras/: Benchmark.py  CMakeLists.txt  Config.py  README.md  alexnet.py  alexnet2.py  alexnet_imagenet.py  alexnet_imagenet.test  lenet.py  lit.cfg.py  mobilenet_cifar10.py  mobilenet_cifar10.test  resnet18_cifar10.py  resnet18_cifar10.test  resnet50_imagenet.py  test_benchmarks.py  vgg16_cifar10.py  vgg16_cifar100.py  vgg16_cifar100.test  vgg16_imagenet.py
hpvm/test/hpvm-tensor-rt/: CMakeLists.txt  lit.cfg.py  perforation.test  sampling.test
hpvm/test/hpvm_pass/: CMakeLists.txt  lit.cfg.py
hpvm/tools/: CMakeLists.txt  README.md
hpvm/tools/hpvm-clang/: CMakeLists.txt  main.py.in  setup.py
hpvm/tools/hpvm-config/: CMakeLists.txt  LibraryDependencies.inc  hpvm-config.cpp
workspace/example/: simple_graph.ll  (+3 more)
(+335 files in other folders)
