add_subdirectory(BuildDFG)
add_subdirectory(ClearDFG)
add_subdirectory(DFG2LLVM_OpenCL)
add_subdirectory(DFG2LLVM_CPU)
add_subdirectory(GenHPVM)
add_subdirectory(LocalMem)
add_subdirectory(DFG2LLVM_WrapperAPI)
add_subdirectory(DFG2LLVM_CUDNN)
add_subdirectory(FuseHPVMTensorNodes)
add_subdirectory(InPlaceDFG)
