find_package(OpenCV 4)
if(NOT ${OpenCV_FOUND})
  find_package(OpenCV 3)
endif()
if(${OpenCV_FOUND})
  message(STATUS "Found OpenCV at ${OpenCV_INCLUDE_DIRS} for HPVM benchmark 'pipeline'")
  foreach(incl_dir ${OpenCV_INCLUDE_DIRS})
    list(APPEND all_flags "-I${incl_dir}")
  endforeach()
  foreach(link_lib ${OpenCV_LIBS})
    list(APPEND all_flags "-l${link_lib}")
  endforeach()
  list(
    APPEND all_flags -L "${OpenCV_INSTALL_PATH}/lib"
    -O3 -ffast-math -fno-lax-vector-conversions -fno-vectorize -fno-slp-vectorize
  )
  add_hpvm_cpu_gpu_benchmark("pipeline" "${all_flags}" c++ src/main.cc "")
else()
  message(WARNING "OpenCV (3 or 4) not found; not compiling HPVM benchmark 'pipeline'")
endif()
